tests/ui/endpoint/dynamic_schema_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/ui/endpoint/dynamic_schema_wrong_type.rs:16:21
   |
16 | #[read_all(schema = "schema", status_codes = "status_codes")]
   |                     ^^^^^^^^ expected `u16`, found struct `gotham_restful::gotham::hyper::StatusCode`

error[E0308]: mismatched types
  --> tests/ui/endpoint/dynamic_schema_wrong_type.rs:16:21
   |
16 | #[read_all(schema = "schema", status_codes = "status_codes")]
   |                     ^^^^^^^^
   |                     |
   |                     expected struct `OpenapiSchema`, found struct `std::string::String`
   |                     expected due to this

error[E0308]: mismatched types
  --> tests/ui/endpoint/dynamic_schema_wrong_type.rs:16:46
   |
16 | #[read_all(schema = "schema", status_codes = "status_codes")]
   |                                              ^^^^^^^^^^^^^^
   |                                              |
   |                                              expected struct `gotham_restful::gotham::hyper::StatusCode`, found `u16`
   |                                              expected due to this
   |
   = note: expected struct `Vec<gotham_restful::gotham::hyper::StatusCode>`
              found struct `Vec<u16>`
